# kagent

./: Makefile
docker/deepagents-sandbox-base/: Dockerfile  langgraph.json  pyproject.toml  server_graph.py
examples/: GATEWAY_SUPPORT.md  multi-cluster-agent-with-gateways.yaml
go/api/v1alpha2/: agent_types.go  agentharness_types.go  zz_generated.deepcopy.go
go/core/internal/controller/: agentharness_openshell_controller.go
go/core/internal/httpserver/handlers/: sandbox_ssh.go
go/core/pkg/app/: app.go
go/core/pkg/sandboxbackend/openshell/: deepagents.go  policy.go  ssh_terminal.go
go/core/pkg/sandboxbackend/openshell/deepagents/: bootstrap.go  bootstrap_test.go  constants.go  policy.go  policy_test.go  ssh.go  ssh_test.go
go/internal/controller/translator/agent/: adk_api_translator.go
helm/agents/argo-rollouts/: Chart.yaml
helm/agents/cilium-crd/: Chart.yaml
helm/agents/helm/: Chart.yaml
helm/agents/istio/: Chart.yaml
helm/agents/k8s/: Chart.yaml
helm/agents/kgateway/: Chart.yaml
helm/agents/observability/: Chart.yaml
helm/agents/promql/: Chart.yaml
helm/kagent/: Chart.yaml  fix-charts.sh  values.yaml
helm/kagent-crds/templates/: kagent.dev_agentharnesses.yaml  kagent.dev_agents.yaml
